--- a/SSMManager/src/com/zyp/config/db.properties
+++ b/SSMManager/src/com/zyp/config/db.properties
@@ -1,4 +1,4 @@
 jdbc.driverClass=com.mysql.jdbc.Driver
 jdbc.jdbcUrl=jdbc:mysql://47.94.169.241:3306/zyp?characterEncoding=utf-8
 jdbc.user=root
-jdbc.password=123456
+jdbc.password=zxx123456
